--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="eg">
  <head>
   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link href="style.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="jpg/4.ico">
   <title>Натяжные потолки</title>
  </head> 
  <body> 
-
-    
-
-
     <div class="shapka">
                <div class="logo"></div>
         <div class="head"><!--Меню лист-->
@@ -22,9 +18,6 @@
                 <a href="#discon" rel="m_PageScroll2id" class="about5">Скидки</a>
                 <a href="#contact" rel="m_PageScroll2id" class="about6">Контакты</a>   
             </div>
-
-
-
                  <div class="phone">
                     <div class="ico"><a href="https://api.whatsapp.com/send/?phone=%2B79508476661&text&app_absent=0">
                         <img src="jpg/3.png" alt="" style="width: 44px"  ></a>
@@ -34,8 +27,6 @@
                      <a href="tel:+79508476661" class="zvonok">+7 (950) 847-66-61</a>
                 </div> 
             </div>
-
-   
     <div id="about"class="background1"> 
         <div class="header_nav"><!--темная сторона-->
             <div class="main">Натяжные потолки в <b>                  Ростовской области</b> 
@@ -356,7 +347,7 @@
                                                         <span id="total-price">0</span>
                                                         рублей
                                                     </div>
-                                                    <div class="itisnot">Указанная стоимость является примерной <br> и не является публичной офертой</div>
+                                                    <div class="itisnot">Указанная стоимость является приблизительной <br> и не является публичной офертой</div>
                                                 </div>
                                                 <!-- // Стоимость ремонта -->
                                             </form>
