--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/roma.css" />
-
-  <link href="style.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="jpg/4.ico">
+    <link rel="stylesheet" href="style.css" >
+    <link rel="shortcut icon" href="jpg/4.ico">
   <title>Натяжные потолки</title>
  </head> 
  <body> 
