--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/roma.css" />
     <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="phone.css">
     <link rel="shortcut icon" href="jpg/4.ico">
   <title>Натяжные потолки</title>
  </head> 
